Prevent unnecessary scrollbar from appearing in the track container.

--- a/app/styles/animation-tracks.scss
+++ b/app/styles/animation-tracks.scss
@@ -1,6 +1,6 @@
 .rt-animation-tracks-view {
   clear: both;
   float: left;
-  overflow: scroll;
+  overflow: hidden;
   width: 100%;
 }
